[gd_scene load_steps=8 format=3 uid="uid://cjrslniwn7ofu"]

[ext_resource type="Script" path="res://controls/Canvas/PenSettings/pen_selector/pen_selector.gd" id="1_cblfb"]
[ext_resource type="Texture2D" uid="uid://b3psigv706yae" path="res://icon.svg" id="2_v8cvw"]
[ext_resource type="PackedScene" uid="uid://c35g57mkpr31f" path="res://controls/Canvas/PenSettings/pen_selector/pen_button/pen_button.tscn" id="3_spaf6"]
[ext_resource type="Script" path="res://resources/circle_line.gd" id="4_50qyk"]
[ext_resource type="PackedScene" uid="uid://d0w1xovp835nv" path="res://controls/Canvas/PenSettings/pen_settings/line_pen/line_pen.tscn" id="4_xqm5p"]

[sub_resource type="LinePen" id="LinePen_50qyk"]

[sub_resource type="LinePen" id="LinePen_8ub7w"]
script = ExtResource("4_50qyk")

[node name="PenSelector" type="Control"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cblfb")

[node name="MenuToggle" type="Button" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0
size_flags_horizontal = 4
toggle_mode = true
text = "Cheesesefsfessefsef"
icon = ExtResource("2_v8cvw")
text_overrun_behavior = 2
expand_icon = true

[node name="MenuPanel" type="PopupPanel" parent="."]
position = Vector2i(0, 48)
size = Vector2i(140, 72)
content_scale_mode = 1

[node name="PenContainer" type="GridContainer" parent="MenuPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="CappedLineButton" parent="MenuPanel/PenContainer" instance=ExtResource("3_spaf6")]
layout_mode = 2
tooltip_text = "Capped Line"
pen = SubResource("LinePen_50qyk")
pen_settings_control = ExtResource("4_xqm5p")

[node name="CircleLineButton" parent="MenuPanel/PenContainer" instance=ExtResource("3_spaf6")]
layout_mode = 2
tooltip_text = "Circle Line"
pen = SubResource("LinePen_8ub7w")
pen_settings_control = ExtResource("4_xqm5p")
